--- a/.eslintrc
+++ b/.eslintrc
@@ -22,17 +22,25 @@
     "react/prop-types": "off"
   },
   "settings": {
-    "import/extensions": [".js",".jsx",".ts",".tsx"],
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
     "import/parsers": {
-      "@typescript-eslint/parser": [".ts",".tsx"]
-     },
-     "import/resolver": {
-       "node": {
-         "extensions": [".js",".jsx",".ts",".tsx"]
-       }
-     },
-     "react": {
-       "version": "detect"
-     }
-  }
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    },
+    "react": {
+      "version": "detect"
+    }
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
