--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
     "history": "^4.10.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
