--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.4.0",
@@ -85,8 +84,7 @@
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "react-scripts": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
